2004-12-27 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated version to 20041228

2004-07-03 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated version to 20040710

2004-01-11 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated version to 20040111

2003-12-31 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped version to 20031231

2003-11-09 Ales Hvezda   <ahvezda@geda.seul.org>

        * install-sh missing mkinstalldirs: Removed these files from the
        CVS repository.

        * autogen.sh: Added new script to recreate all the necessary auto*
        files.

2003-10-18 Ales Hvezda   <ahvezda@geda.seul.org>

        * */*.sch: Updated all example schematics

        * */gschlasrc: Added in all subdirs

	* configure.ac: Updated version to something more recent, but this
	version is not an official release.
	
2003-10-04 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated version to something more recent, but this
        version is not an official release.

2003-08-31 Ales Hvezda   <ahvezda@geda.seul.org>

	* *.sch/*.sym: Updated all sch/sym files to 20030901

2003-08-24 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Added a configuration complete message just to be
	consistent.

2003-07-20 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.ac: Renamed from configure.in 

	* configure.ac: Minor tweeks to get this file up to snuff.
	
	* *.in, *.h, etc: Removed a bunch of old unneeded auto* files.
	
2003-05-25 Ales Hvezda   <ahvezda@geda.seul.org>

	* lightning_detector/: Added sch/pcb example by Terry Porter.

	* RF_Amp/: Added hierarchical spice example by Stuart Brorson

	* TwoStageAmp/: Added another spice example by Stuart Brorson

	* Makefile.am, configure.in: Added above directories

	* Added a bunch of .cvsignore files

2003-05-22 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.in: Updated version
