@@ -3,7 +3,7 @@ SUBDIRS = model sym
 
 EXTRA_DIST = 5980-2396E.pdf MSA-2643.cir MSA-2643.sch \
              Q1.cir Q1.sch Q2.cir Q2.sch README Simulation.cmd \
-	     gnetlistrc gschemrc gschlasrc
+	     gafrc
 
 MOSTLYCLEANFILES = gschem.log *~
 CLEANFILES = gschem.log *~
